--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
     async function getBotReply() {
       appendMessage("...", "bot");
 
-      const res = await fetch("/api/chat.js", {
+      const res = await fetch("/api/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ messages })
