--- a/public/index.html
+++ b/public/index.html
@@ -156,11 +156,11 @@
     async function getBotReply() {
       appendMessage("...", "bot");
 
-      const res = await fetch("/api/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ messages })
-      });
+fetch('/api/chat', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({ message: userInput })
+});
 
       const data = await res.json();
       const reply = data.reply || "(Tidak ada balasan)";
