--- a/public/index.html
+++ b/public/index.html
@@ -156,11 +156,11 @@
     async function getBotReply() {
       appendMessage("...", "bot");
 
-fetch('/api/chat', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({ message: userInput })
-});
+      const res = await fetch("/api/chat", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ messages })
+      });
 
       const data = await res.json();
       const reply = data.reply || "(Tidak ada balasan)";
